# NanoDesigner

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  100_PERCENT_PRODUCTION_AUDIT.md  API_DOCUMENTATION.md  Blueprint.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Frontend Blueprint.md  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_PLAN.md  README.md  SECURITY.md  TASKS.md  docker-compose.yml  package.json  pnpm-lock.yaml  sonar-project.properties  test_e2e_api.py
api/: Dockerfile  conftest.py  kaae_canon.json  openapi.yaml  pyproject.toml  pytest.ini
api/app/: main.py
api/app/core/: api_versioning.py  circuit_breaker.py  config.py  database.py  enhanced_security.py  health.py  lifecycle.py  logging.py  monitoring.py  rate_limiter.py  retry.py  secrets.py  security.py  standardized_errors.py  structured_logging.py  tenant_isolation.py
api/app/middleware/: production.py  request_response.py  request_size_limit.py  security_headers.py
api/app/models/: exceptions.py  responses.py  schemas.py
api/app/monitoring/: production_monitoring.py
api/app/routers/: admin.py  async_render.py  canon.py  critique.py  e2e.py  health.py  health_check.py  health_detailed.py  ingest.py  monitoring.py  prometheus.py  render.py  render_refactored.py  upload.py  websocket.py
api/app/services/: brand_canon_enforcer.py  canon.py  cost_control.py  cost_tracker.py  db.py  docai.py  e2e_monitoring.py  e2e_performance.py  embed.py  enhanced_openrouter.py  error_experience.py  error_handler.py  gemini_image.py  guardrails.py  journey_optimizer.py  langfuse.py  openrouter.py  openrouter_policy.py  prompts.py  qdrant.py  queue.py  redis.py  redis_atomic.py  render_service.py  security_scanner.py  startup.py  storage_adapter.py  storage_local.py  storage_r2.py  synthid.py  unstructured.py  worker_manager.py
api/app/tests/: test_contracts.py  test_middleware.py  test_services.py
api/app/tests/contracts/: test_guardrails_contracts.py
api/app/tests/integration/: placeholder.py  test_100_percent_ready.py  test_async_render.py  test_atomic_cache.py  test_budget_alerts.py  test_enhanced_openrouter.py  test_enhanced_security.py  test_hash_optimization.py  test_http_client.py  test_ingest_security.py  test_main_render_endpoint.py  test_mock_endpoint.py  test_mock_service.py  test_monitoring.py  test_policy.py  test_qdrant_isolation.py  test_rate_limiter.py  test_render.py  test_render_endpoint.py  test_simple_endpoint.py  test_tenant_isolation.py  test_tracing.py
api/app/tests/mocks/: mock_image_generation.py  render_simple.py
api/app/tests/unit/: test_brand_canon_enforcer.py  test_cost_tracker.py  test_error_handler.py  test_guardrails.py  test_openrouter.py  test_redis_service.py  test_synthid.py
api/docs/: API_DOCUMENTATION.md
config/: deployment-checklist.md  production.env.template
docker/: Dockerfile.production  api.Dockerfile  docker-compose.prod.yml  healthcheck.sh  nginx.conf  web.Dockerfile
docs/: API_DOCUMENTATION.md  DEVELOPMENT_GUIDE.md
examples/: curl.http  postman.http
guardrails/: canon.json  critique.json  render_plan.json
k8s/: api.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  qdrant.yaml  redis.yaml  web.yaml
monitoring/: prometheus-rules.yaml
policies/: blacklist.txt  content_policy.json  openrouter_policy.json
scripts/: db_migrate.sh  deploy.sh  dev_bootstrap.sh  generate-production-secrets.sh  migrate.py  migrate.sh  perf.sh  seed_demo.sh  setup-secrets.sh  smoke-test.sh  smoke.sh  (+3 more)
(+156 files in other folders)
